images and LoadMore button

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -177,8 +177,8 @@ img {
   max-height: calc(100vh - 24px);
 }
 
-/*
-* Стили компонента Buton (Load more)
+/* 
+* Стили компонента Button (Load more)
 */
 .Button {
   padding: 8px 16px;
